--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^30.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "js-cookie": "^3.0.1",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "17.0.2",
     "sass": "^1.43.2",
+    "sweetalert2": "^11.1.9",
     "swiper": "^6.8.4"
   },
   "devDependencies": {
